fix(ui): hide scrollbars

--- a/frontend/apps/desktop/src/root.css
+++ b/frontend/apps/desktop/src/root.css
@@ -26,3 +26,7 @@ body {
 .split-view-view {
   height: 100%;
 }
+
+::-webkit-scrollbar {
+  display: none !important;
+}
